--- a/src/Components /main-style.css
+++ b/src/Components /main-style.css
@@ -1,11 +1,9 @@
-/* Reset the default margin and padding for the whole document */
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
   }
   
-  /* Create a container that centers the login form */
   .container {
     display: flex;
     justify-content: center;
@@ -73,3 +71,68 @@ html, body {
     margin-top: 10px; /* Adjust the margin value as needed */
   }
   
+  .navigation-items {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .navigation {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between; /* Updated to space-between */
+    align-items: center;
+    flex-direction: row;
+    height: 60px;
+    background-color: #f0f0f0;
+    border-radius: 20px;
+    width: 95%;
+    padding: 0 20px; /* Added padding to create space between sections */
+  }
+  
+  .left-section {
+    display: flex;
+    align-items: center;
+  }
+  
+  .left-section h3 {
+    margin: 0; /* Remove margin for the h3 element */
+  }
+  
+  .items {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .search-section {
+    display: flex;
+  }
+  
+  .search-section input {
+    margin: 0 10px; /* Add some margin between search bars */
+  }
+
+  .card {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+  .Home{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+  }
+  .left-Home {
+    /* Your existing styles */
+    overflow-y: auto; /* Add this line to enable y-direction overflow */
+  }
+  
+  .cards-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
