--- a/src/Components /main-style.css
+++ b/src/Components /main-style.css
@@ -8,7 +8,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: white;
     height: 100vh;
   }
   
@@ -38,10 +38,10 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #fcfcfc;
     border: 1px solid #ccc;
     border-radius: 8px;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
     height: 250px;
     width: 45%;
     margin: 20px; /* Add margin for spacing between elements */
@@ -83,7 +83,8 @@ html, body {
     align-items: center;
     flex-direction: row;
     height: 60px;
-    background-color: #f0f0f0;
+    background-color: #fafafa;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     width: 95%;
     padding: 0 20px; /* Added padding to create space between sections */
@@ -101,6 +102,29 @@ html, body {
   .items {
     display: flex;
     flex-direction: row;
+    align-items: center;
+  }
+  
+  .button-items {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .button-item {
+    background-color: #f3f0f0;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 20px; /* Add padding to create space around the buttons */
+    cursor: pointer; /* Add a pointer cursor on hover */
+    margin: 0 5px; /* Add margin between the buttons */
+    transition: background-color 0.3s; /* Smooth background color transition on hover */
+  }
+  
+  .button-item:hover {
+    background-color: #f0f0f0; /* Change the background color on hover */
   }
   
   .search-section {
@@ -134,5 +158,10 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 20px;
+    font-weight: bold;
+
   }
